--- a/pluto-utilities/src/main/res/values/styles.xml
+++ b/pluto-utilities/src/main/res/values/styles.xml
@@ -1,5 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
+
+    <style name="PlutoTheme" parent="Theme.MaterialComponents.Light">
+        <item name="colorPrimary">@color/pluto___colorPrimary</item>
+        <item name="colorPrimaryDark">@color/pluto___colorPrimaryDark</item>
+        <item name="colorAccent">@color/pluto___colorAccent</item>
+        <!--        <item name="textAppearanceLargePopupMenu">@style/PopupTheme</item>-->
+    </style>
+
+    <style name="PlutoTheme.NoActionBar" parent="PlutoTheme">
+        <item name="colorPrimary">@color/pluto___app_bg</item>
+        <item name="colorPrimaryDark">@color/pluto___app_bg</item>
+        <item name="colorAccent">@color/pluto___dark</item>
+        <item name="android:windowLightStatusBar" tools:ignore="NewApi">true</item>
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
+    </style>
+
+    <style name="PlutoTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
+        <item name="colorPrimary">@color/pluto___app_bg</item>
+        <item name="colorPrimaryDark">@color/pluto___app_bg</item>
+        <item name="colorAccent">@color/pluto___dark</item>
+    </style>
+
+    <style name="PlutoTabLayoutStyle" parent="Widget.Design.TabLayout">
+        <item name="tabTextColor">@color/pluto___text_dark_60</item>
+        <item name="tabSelectedTextColor">@color/pluto___text_dark</item>
+        <item name="tabTextAppearance">@style/PlutoTabStyle</item>
+        <item name="tabPaddingStart">@dimen/pluto___margin_medium</item>
+        <item name="tabPaddingEnd">@dimen/pluto___margin_medium</item>
+        <item name="tabPaddingBottom">-6dp</item>
+    </style>
+
+    <style name="PlutoTabStyle" parent="TextAppearance.Design.Tab">
+        <item name="android:textSize">@dimen/pluto___text_small</item>
+        <item name="android:fontFamily">@font/muli_bold</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+
     <style name="PlutoBottomSheet" parent="@style/Widget.Design.BottomSheet.Modal">
         <item name="android:background">@drawable/pluto___bg_bottom_sheet</item>
     </style>
