--- a/plugin-logger/src/main/res/layout/pluto_logger___fragment_logs.xml
+++ b/plugin-logger/src/main/res/layout/pluto_logger___fragment_logs.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.LogsFragment">
+    android:layout_height="match_parent">
 
-    <TextView
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/container"
+        android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="logs" />
+        app:defaultNavHost="true"
+        app:navGraph="@navigation/pluto_logger___navigation" />
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
